syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/contactcommunicationmethodfield";

message ContactCommunicationMethodField {
    string contact_system_code = 1;

    int64 contact_id = 2;

    int64 contact_communication_method_id = 3;

    string field_code = 4;

    string field_value = 5;
}